<resources>
    <string name="app_name">Daily Steps!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Daily Steps</string>
    <string name="nav_header_subtitle">Travail de M. Eric NINGABIYE</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_share_steps">Destinataires WIFI</string>
    <string name="percent"> <b>%1$d</b> %2$s du jour précédent</string>
    <string name="share">Partager</string>
    <string name="today_count">%1$d</string>
    <string name="today">pas effectués aujourd\'hui</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="connecter">Connecter</string>
    <string name="name">Votre nom d\'utilisateur</string>
    <string name="moyenne">Moyenne</string>
    <string name="minimum">Minimum mensuel</string>
    <string name="maximum">Maximum Mensuel</string>
    <string name="moy_mensuel">Moyenne Mensuelle</string>
    <string name="total_mensuel">Total Mensuel</string>
    <string name="envoyer">Envoyer</string>
    <string name="connect">Connecter</string>
    <string name="title_activity_messages">Messages</string>
    <string name="message_shared">Messages reçus</string>
    <string name="change_user">Changer d\'utilisateur</string>
    <string name="title_activity_stat">Stats</string>
</resources>
