<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/user"
            android:title="@string/change_user" />
        <item
            android:id="@+id/message_shared"
            android:title="@string/message_shared" />
        <item
            android:id="@+id/total"
            android:title="@string/total_mensuel" />
        <item
            android:id="@+id/moyenne"
            android:title="@string/moy_mensuel" />
        <item
            android:id="@+id/min"
            android:title="@string/minimum" />
        <item
            android:id="@+id/max"
            android:title="@string/maximum" />
    </group>

</menu>
